# rly.chat

./: .gitignore  README.md
client/: .env  example.env  next.config.js  package-lock.json  package.json
client/api/: index.ts
client/app/: layout.tsx  page.tsx  providers.tsx
client/components/: icons.tsx  loader.tsx  navbar.tsx  password-prompt.tsx  primitives.ts  simIdentifier.tsx
client/config/: fonts.ts  site.ts
client/idb/: index.tsx
client/public/: manifest.json  sw.js
client/types/: index.ts
client/utils/: constants.ts  useContacts.tsx  useGetSim.tsx  (+1 more)
kafka/: docker-compose.yml
server/: .dockerignore  Cargo.toml  Dockerfile  _meta.json  deeb.json  docker-compose.yml  example.env  rly.db
server/.sqlx/: query-1398108cef9edfb393de7d91fddc7ae1468a2328803770b4a19148750dfd6136.json  query-c3a2e0fd9e7a569ed426cfaa2a1a8dcb531fb432d33e3b0a1319addb7ffd63a7.json  query-e02d91612f8d2bf6cd4b25b12164929064ba1d1d8c7190379a9efa226619800b.json
server/migrations/: 20250405191907_message.up.sql  20250413165819_share-contact.down.sql  20250413165819_share-contact.up.sql
server/src/: main.rs
server/src/app_data/: mod.rs
server/src/broker/: mod.rs
server/src/database/: mod.rs
server/src/encrypted_message/: mod.rs
server/src/environment/: mod.rs
server/src/models/: mod.rs
server/src/models/encrypted_message/: mod.rs
server/src/models/shared_contact/: mod.rs
server/src/routes/: mod.rs
server/src/routes/chat/: mod.rs
server/src/routes/contact_link/: mod.rs
server/src/routes/encrypted_message/: mod.rs
server/src/service_response/: mod.rs
(+43 files in other folders)
