[package]
name = "rly-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
actix-ws = "0.3.0"
aes-gcm = "0.10.3"
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = "0.4.40"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
deeb = { path = "../../deeb" }
